Add timeline images

--- a/expertise.html
+++ b/expertise.html
@@ -1,7 +1,7 @@
 ---
 layout: null
-section-type: skills
-title: Skills
+section-type: expertise
+title: Expertise
 ---
 
 <!--
@@ -15,8 +15,8 @@ title: Skills
 \*Novice \**Intermediate \***Advanced
 
 ### Python  
-\*: SQLAlchemy  
-\**: Redis, boto3, pandas, altair, dask, threading, concurrent  
+\*: SQLAlchemy, PySpark  
+\**: Redis, boto3, pandas, altair, dask, threading, concurrent    
 \***: CCXT, logging  
 
 ### AWS  
@@ -25,11 +25,11 @@ title: Skills
 \***:  
 
 ### Topics  
-\*: System Design  
-\**: 
-\***: Finance, Data Visualization
+\*: System Design, NoSQL, automated testing  
+\**: documentation  
+\***: Data Visualization, Financial Inclusion, Decentralized Finance, Fintech  
 
-### Tools  
-\*: LucidChart, Docker  
-\**: Bitbucket, Redis, Linux, Git, Jupyter Lab, ConEmu, TradingView, Jekyll static website generator  
+### Tools
+\*: LucidChart, Docker, Hadoop, Spark  
+\**: Bitbucket, Redis, Linux, Git, Jupyter Lab, ConEmu, TradingView, Jekyll static website generator, Sourcetree  
 \***: GitHub, Atom+Hydrogen, MySQL, Asana, HeidiSQL, QlikView  
