Rephrasing, google analytics, toolbox

--- a/expertise.html
+++ b/expertise.html
@@ -12,7 +12,7 @@ title: Expertise
 5 - Expert (recognized authority)
 -->
 
-## Knowledge  
+## Expertise  
 \*Novice \**Intermediate \***Advanced
 
 ### Python  
