--- a/more.html
+++ b/more.html
@@ -5,9 +5,9 @@ title: More
 ---
 
 ## More
-[On the web](profiles.html)  
-[Koen's productivity hacks & Toolbox](toolbox.html)  
-[Take a peak in my second mind - Twitter, Youtube, Medium, ... likes and other recommendations](https://pinboard.in/u:KoenB)
+[On the Web](profiles.html) - List of online profiles  
+[Koen's Toolbox](toolbox.html) - Software and App recommendations  
+[Second Memory](https://pinboard.in/u:KoenB) - Likes and bookmarks around the web  
 
 <!-- 
 Chrome extensions
