--- a/contact.html
+++ b/contact.html
@@ -5,4 +5,4 @@ title: Contact
 ---
 ## Contact
 
-Drop me an email if you are interested in me coding for you or if you just want to reach out!
+Drop me an email if you are interested in me building a product for you or if you just want to reach out.
