restructure about and expertise

--- a/about.html
+++ b/about.html
@@ -5,8 +5,10 @@ title: About
 ---
 ## About
 
+<p class="text-justify"> 
+<!-- text-justify is bootstrap -->
 Koen is an allround data guy. He is a senior data engineer with a good knowledge of data visualization. He creates structure, stands for quality, loves optimizing systems and getting the details right. He is inspired by hard problems which when solved could have a substantial human impact. He is passioned about financial inclusion, fintech and decentralized finance. He is addicted to learning new concepts and improving his mental models.
-
+</p>
 
 <!-- <small>
 Octocat is Github's logo and trademark and here is used to illustrate a fictional character (John Smith) that used the *{ Personal }* Jekyll Theme to build his website.
