--- a/expertise.html
+++ b/expertise.html
@@ -12,13 +12,13 @@ title: Expertise
 5 - Expert (recognized authority)
 -->
 
-## Expertise  
+<!-- ## Expertise  
 \*Novice \**Intermediate \***Advanced
 
-### Python  
+### Python
 \*: SQLAlchemy, PySpark  
 \**: Redis, boto3, pandas, altair, dask, threading, concurrent    
-\***: CCXT, logging  
+\***: CCXT, logging
 
 ### AWS  
 \*: IAM  
@@ -33,4 +33,68 @@ title: Expertise
 ### Tools
 \*: LucidChart, Docker, Hadoop, Spark  
 \**: Bitbucket, Redis, Linux, Git, Jupyter Lab, ConEmu, TradingView, Jekyll static website generator, Sourcetree  
-\***: GitHub, Atom+Hydrogen, MySQL, Asana, HeidiSQL, QlikView  
+\***: GitHub, Atom+Hydrogen, MySQL, Asana, HeidiSQL, QlikView   -->
+
+
+
+## Expertise 
+
+<br>
+### Python
+<div class="row">
+  <div class="col-sm-2 col-sm-offset-2 text-left">       
+    <p>Novice</p>
+    <p>Intermediate</p>
+    <p>Advanced</p>
+  </div>
+  <div class="col-sm-6 text-left">       
+    <p>SQLAlchemy, PySpark</p>
+    <p>Redis, boto3, pandas, altair, dask, threading, concurrent</p>
+    <p>CCXT, logging</p>
+  </div>
+</div>
+
+<br>
+### AWS
+<div class="row">
+  <div class="col-sm-2 col-sm-offset-2 text-left">       
+    <p>Novice</p>
+    <p>Intermediate</p>
+    <p>Advanced</p>
+  </div>
+  <div class="col-sm-6 text-left">       
+    <p>IAM </p>
+    <p>EC2, RDS, CloudWatch, Parameter Store, S3</p>
+    <p>SageMaker</p>
+  </div>
+</div>
+
+<br>
+### Topics
+<div class="row">
+  <div class="col-sm-2 col-sm-offset-2 text-left">       
+    <p>Novice</p>
+    <p>Intermediate</p>
+    <p>Advanced</p>
+  </div>
+  <div class="col-sm-6 text-left">       
+    <p>System Design, NoSQL, automated testing</p>
+    <p>documentation</p>
+    <p>Data Visualization, Financial Inclusion, Decentralized Finance, Fintech </p>
+  </div>
+</div>
+
+<br>
+### Tools
+<div class="row">
+  <div class="col-sm-2 col-sm-offset-2 text-left">       
+    <p>Novice</p>
+    <p>Intermediate</p>
+    <p>Advanced</p>
+  </div>
+  <div class="col-sm-6 text-left">       
+    <p>LucidChart, Docker, Hadoop, Spark</p>
+    <p>Bitbucket, Redis, Linux, Git, Jupyter Lab, ConEmu, TradingView, Jekyll static website generator, Sourcetree</p>
+    <p>GitHub, Atom+Hydrogen, MySQL, Asana, HeidiSQL, QlikView</p>
+  </div>
+</div>
