--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ title: About
 
 <p class="text-justify"> 
 <!-- text-justify is bootstrap -->
-Koen is an allround data guy. He is a senior data engineer with a good knowledge of data visualization. He creates structure, stands for quality, loves optimizing systems and getting the details right. He is inspired by hard problems which when solved could have a substantial human impact. He is passioned about financial inclusion, fintech and decentralized finance. He is addicted to learning new concepts and improving his mental models.
+Koen is an allround data guy. He is a senior data engineer with a good knowledge of data visualization. He creates structure, stands for quality, loves optimizing systems and getting the details right. He is inspired by hard problems which when solved could have a substantial human impact. He is passioned about financial inclusion, fintech and decentralized finance. He is addicted to learning new concepts and improving his mental models. On a project he brings new ideas to the table to solve complex problems. He introduces automation using readable, documented and pythonic code.
 </p>
 
 <!-- <small>
