expertise add data science platform

--- a/expertise.html
+++ b/expertise.html
@@ -12,89 +12,75 @@ title: Expertise
 5 - Expert (recognized authority)
 -->
 
-<!-- ## Expertise  
-\*Novice \**Intermediate \***Advanced
+<h2 align="center"> Expertise </h2>    
+<p align="center"> *Novice **Intermediate ***Advanced </p> 
 
-### Python
-\*: SQLAlchemy, PySpark  
-\**: Redis, boto3, pandas, altair, dask, threading, concurrent    
-\***: CCXT, logging
+<br>
+<h3 align="center"> Python </h3>  
+\* &nbsp;: sqlalchemy, pyspark, argparse, regex   
+\** : redis, boto3, pandas, numpy, altair, dask, threading, concurrent     
+\***: CCXT, logging  
 
-### AWS  
-\*: IAM  
-\**: EC2, RDS, CloudWatch, SageMaker, Parameter Store, S3  
+<br>
+<h3 align="center"> AWS </h3>  
+\* &nbsp;: IAM, SNS  
+\** : EC2, RDS, CloudWatch, SageMaker, Parameter Store, S3  
 \***:  
 
-### Topics  
-\*: System Design, NoSQL, automated testing  
-\**: documentation  
-\***: Data Visualization, Financial Inclusion, Decentralized Finance, Fintech  
-
-### Tools
-\*: LucidChart, Docker, Hadoop, Spark  
-\**: Bitbucket, Redis, Linux, Git, Jupyter Lab, ConEmu, TradingView, Jekyll static website generator, Sourcetree  
-\***: GitHub, Atom+Hydrogen, MySQL, Asana, HeidiSQL, QlikView   -->
-
-
-
-## Expertise 
+<br>
+<h3 align="center"> Topics & concepts </h3>   
+\* &nbsp;: System Design, NoSQL, automated testing, command line interfaces, API creation  
+\** : documentation  
+\***: Data Visualization, Financial Inclusion, Decentralized Finance, Fintech, API usage   
 
 <br>
-### Python
-<div class="row">
-  <div class="col-sm-2 col-sm-offset-2 text-left">       
-    <p>Novice</p>
-    <p>Intermediate</p>
-    <p>Advanced</p>
-  </div>
-  <div class="col-sm-6 text-left">       
-    <p>SQLAlchemy, PySpark</p>
-    <p>Redis, boto3, pandas, altair, dask, threading, concurrent</p>
-    <p>CCXT, logging</p>
-  </div>
-</div>
+<h3 align="center"> Tools & Software </h3> 
+\* &nbsp;: Docker, Hadoop, Spark, MongoDB, LucidChart    
+\** : Bitbucket, Redis, Linux, Git, Jupyter Lab, ConEmu, TradingView, Jekyll static website generator, Sourcetree, Coda, shell scripts    
+\***: GitHub, Atom+Hydrogen, MySQL, Asana, HeidiSQL, QlikView, MarkDown
 
 <br>
-### AWS
-<div class="row">
-  <div class="col-sm-2 col-sm-offset-2 text-left">       
-    <p>Novice</p>
-    <p>Intermediate</p>
-    <p>Advanced</p>
-  </div>
-  <div class="col-sm-6 text-left">       
-    <p>IAM </p>
-    <p>EC2, RDS, CloudWatch, Parameter Store, S3</p>
-    <p>SageMaker</p>
-  </div>
-</div>
+<h3 align="center"> My data science platform Blueprint </h3>   
+<img 
+  src="./img/data_science_platform_blueprint.jpg" 
+  alt="Data science platform blueprint" 
+  title="" 
+  width="600" 
+  style="border:none;"
+/>
 
 <br>
-### Topics
-<div class="row">
-  <div class="col-sm-2 col-sm-offset-2 text-left">       
-    <p>Novice</p>
-    <p>Intermediate</p>
-    <p>Advanced</p>
-  </div>
-  <div class="col-sm-6 text-left">       
-    <p>System Design, NoSQL, automated testing</p>
-    <p>documentation</p>
-    <p>Data Visualization, Financial Inclusion, Decentralized Finance, Fintech </p>
-  </div>
-</div>
+<h3 align="center"> Connect </h3>
+\* &nbsp;: sqlalchemy, requests     
+\** :   
+\***: CCXT, APIs  
 
 <br>
-### Tools
-<div class="row">
-  <div class="col-sm-2 col-sm-offset-2 text-left">       
-    <p>Novice</p>
-    <p>Intermediate</p>
-    <p>Advanced</p>
-  </div>
-  <div class="col-sm-6 text-left">       
-    <p>LucidChart, Docker, Hadoop, Spark</p>
-    <p>Bitbucket, Redis, Linux, Git, Jupyter Lab, ConEmu, TradingView, Jekyll static website generator, Sourcetree</p>
-    <p>GitHub, Atom+Hydrogen, MySQL, Asana, HeidiSQL, QlikView</p>
-  </div>
-</div>
+<h3 align="center"> Buffer </h3>
+\* &nbsp;:  
+\** : Redis  
+\***:  
+
+<br>
+<h3 align="center"> Process - Stream </h3>
+\* &nbsp;:  
+\** :   
+\***:  
+
+<br>
+<h3 align="center"> Process - Batch </h3>
+\* &nbsp;:     
+\** :   
+\***:  
+
+<br>
+<h3 align="center"> Store </h3>
+\* &nbsp;:       
+\** : S3, Redis  
+\***: MySQL  
+
+<br>
+<h3 align="center"> Visualize </h3>
+\* &nbsp;:  
+\** :  
+\***: QlikView, Altair, JupyterLab  
