--- a/about.html
+++ b/about.html
@@ -7,7 +7,11 @@ title: About
 
 <p class="text-justify"> 
 <!-- text-justify is bootstrap -->
-Koen is an allround data guy. He is a senior data engineer with a good knowledge of data visualization. He creates structure, stands for quality, loves optimizing systems and getting the details right. He is inspired by hard problems which when solved could have a substantial human impact. He is passioned about financial inclusion, fintech and decentralized finance. He is addicted to learning new concepts and improving his mental models. On a project he brings new ideas to the table to solve complex problems. He introduces automation using readable, documented and pythonic code.
+
+I'm the founder of a proprietary crypto market-making hedge fund and QlikViewModules.com. I'm a financial data science analytics engineer with an MSc. degree in Mechanical Engineering and profound knowledge in quantitative finance, data visualization, and management. I get inspired by hard problems which when solved could have a substantial human impact. I'm passionate about financial inclusion, fintech, and decentralized finance.
+<br>
+I like designing and building analytics products, optimizing systems, creating structure, getting the details right, and automating using well documented and pythonic code. On a project, I bring new ideas to the table to solve the complex underlying problems. I have a never-ending thirst to learn new concepts, skills, and improve my mental models. Even without being paid, I would still build products.
+
 </p>
 
 <!-- <small>
@@ -16,3 +20,25 @@ Octocat is Github's logo and trademark and here is used to illustrate a fictiona
 
 
 <!-- <iframe src="https://ghbtns.com/github-btn.html?user=le4ker&repo=personal-jekyll-theme&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe> -->
+
+<!-- 
+LinkedIn
+
+I'm the founder of a proprietary crypto market-making hedge fund and QlikViewModules.com. I'm a financial data science analytics engineer with an MSc. degree in Mechanical Engineering and profound knowledge in quantitative finance, data visualization, and management. I get inspired by hard problems which when solved could have a substantial human impact. I'm passionate about financial inclusion, fintech, and decentralized finance.
+ 
+I like designing and building analytics products, optimizing systems, creating structure, getting the details right, and automating using well documented and pythonic code. On a project, I bring new ideas to the table to solve the complex underlying problems. I have a never-ending thirst to learn new concepts, skills, and improve my mental models. Even without being paid, I would still build products.
+
+Reach out if you want to talk to me about new project-based opportunities - remote work preferred - freelance
+
+--Domain knowledge--
+Data Engineering | Analytics | Data Visualization | Financial Inclusion | Decentralized Finance| Fintech | Crypto | Quantitative Finance
+
+--Python--
+CCXT, logging, redis, boto3, pandas, numpy, altair, dask, threading, concurrent, sqlalchemy, pyspark, argparse, regex, 
+
+--AWS--
+EC2, RDS, CloudWatch, SageMaker, Parameter Store, S3, IAM, SNS
+
+--Tools--
+GitHub, Atom+Hydrogen, MySQL, Redis, Linux, Git, Jupyter Lab, ConEmu, TradingView, Sourcetree, Coda, shell scripts, SWAGGER API client generator, Docker, Hadoop, Spark, Asana, HeidiSQL, QlikView
+ -->
