add aware to expertise

--- a/expertise.html
+++ b/expertise.html
@@ -13,31 +13,35 @@ title: Expertise
 -->
 
 <h2 align="center"> Expertise </h2>    
-<p align="center"> *Novice **Intermediate ***Advanced </p> 
+<p align="center"> *Aware **Novice ***Intermediate ****Advanced </p> 
 
 <br>
-<h3 align="center"> Python </h3>  
-\* &nbsp;: sqlalchemy, pyspark, argparse, regex   
-\** : redis, boto3, pandas, numpy, altair, dask, threading, concurrent     
-\***: CCXT, logging  
+<h3 align="center"> Python </h3>
+\* &nbsp;&nbsp;:   
+\** &nbsp;: sqlalchemy, pyspark, argparse, regex   
+\*** : redis, boto3, pandas, numpy, altair, dask, threading, concurrent     
+\****: CCXT, logging  
 
 <br>
-<h3 align="center"> AWS </h3>  
-\* &nbsp;: IAM, SNS  
-\** : EC2, RDS, CloudWatch, SageMaker, Parameter Store, S3  
-\***:  
+<h3 align="center"> AWS </h3>
+\* &nbsp;&nbsp;: [AWS products - Analytics, Database, Machine Learning](https://aws.amazon.com/products/)   
+\** &nbsp;: IAM, SNS  
+\*** : EC2, RDS, CloudWatch, SageMaker, Parameter Store, S3  
+\****:  
 
 <br>
-<h3 align="center"> Topics & concepts </h3>   
-\* &nbsp;: System Design, NoSQL, automated testing, command line interfaces, API creation  
-\** : documentation  
-\***: Data Visualization, Financial Inclusion, Decentralized Finance, Fintech, API usage   
+<h3 align="center"> Topics & concepts </h3>
+\* &nbsp;&nbsp;:   
+\** &nbsp;: System Design, NoSQL, automated testing, command line interfaces, API creation  
+\*** : documentation  
+\****: Data Visualization, Financial Inclusion, Decentralized Finance, Fintech, API usage, Agile   
 
 <br>
-<h3 align="center"> Tools & Software </h3> 
-\* &nbsp;: Docker, Hadoop, Spark, MongoDB, LucidChart    
-\** : Bitbucket, Redis, Linux, Git, Jupyter Lab, ConEmu, TradingView, Jekyll static website generator, Sourcetree, Coda, shell scripts    
-\***: GitHub, Atom+Hydrogen, MySQL, Asana, HeidiSQL, QlikView, MarkDown
+<h3 align="center"> Software & Tools </h3>
+\* &nbsp;&nbsp;:  
+\** &nbsp;: Docker, Hadoop, Spark, MongoDB, LucidChart    
+\*** : Bitbucket, Redis, Linux, Git, Jupyter Lab, ConEmu, TradingView, Jekyll static website generator, Sourcetree, Coda, shell scripts, cron scheduling    
+\****: GitHub, Atom+Hydrogen, MySQL, Asana, HeidiSQL, QlikView, MarkDown
 
 <br>
 <h3 align="center"> My data science platform Blueprint </h3>   
@@ -51,36 +55,42 @@ title: Expertise
 
 <br>
 <h3 align="center"> Connect </h3>
-\* &nbsp;: sqlalchemy, requests     
-\** :   
-\***: CCXT, APIs  
+\* &nbsp;&nbsp;:  
+\** &nbsp;: sqlalchemy, requests, google-api-python-client     
+\*** : AWS CloudWatch Agent for log collection, SWAGGER API client generator  
+\****: CCXT, APIs, Oanda  
 
 <br>
 <h3 align="center"> Buffer </h3>
-\* &nbsp;:  
-\** : Redis  
-\***:  
+\* &nbsp;&nbsp;:  
+\** &nbsp;:  
+\*** : Redis  
+\****:  
 
 <br>
 <h3 align="center"> Process - Stream </h3>
-\* &nbsp;:  
-\** :   
-\***:  
+\* &nbsp;&nbsp;:  
+\** &nbsp;:   
+\*** :   
+\****:  
 
 <br>
 <h3 align="center"> Process - Batch </h3>
-\* &nbsp;:     
-\** :   
-\***:  
+\* &nbsp;&nbsp;:  
+\** &nbsp;:     
+\*** :   
+\****:  
 
 <br>
 <h3 align="center"> Store </h3>
-\* &nbsp;:       
-\** : S3, Redis  
-\***: MySQL  
+\* &nbsp;&nbsp;:  
+\** &nbsp;:        
+\*** : S3, Redis  
+\****: MySQL  
 
 <br>
 <h3 align="center"> Visualize </h3>
-\* &nbsp;:  
-\** :  
-\***: QlikView, Altair, JupyterLab  
+\* &nbsp;&nbsp;:  
+\** &nbsp;:  
+\*** :  
+\****: QlikView, Altair, JupyterLab  
