clean link in expertise

--- a/expertise.html
+++ b/expertise.html
@@ -24,7 +24,7 @@ title: Expertise
 
 <br>
 <h3 align="center"> AWS </h3>
-\* &nbsp;&nbsp;: [AWS products - Analytics, Database, Machine Learning](https://aws.amazon.com/products/)   
+\* &nbsp;&nbsp;: [AWS products](https://aws.amazon.com/products/) - Analytics, Database, Machine Learning   
 \** &nbsp;: IAM, SNS  
 \*** : EC2, RDS, CloudWatch, SageMaker, Parameter Store, S3  
 \****:  
