--- a/profiles.html
+++ b/profiles.html
@@ -14,8 +14,7 @@ https://keybase.pub/koenbal/
 #### Professional
 [LinkedIn](https://be.linkedin.com/in/koenbal)    
 [GitHub](https://github.com/KoenBal)  
-[KeyBase](https://keybase.io/koenbal)  
-
+  
 <br>
 #### Media
 [Twitter](https://twitter.com/BalKoen)  
@@ -27,6 +26,15 @@ https://keybase.pub/koenbal/
 [Professional YouTube](https://www.youtube.com/channel/UC8e9t6GZoG17KbIOOJY5OJw)  
 [IMDB](https://www.imdb.com/user/ur43888385)   
 [Spotify](https://open.spotify.com/user/1118304212?si=744MWEk8TB2pW7p3YxY3Mw)  
+
+<br>
+#### Personal Projects
+[Cross-exchange crypto market making trading engine](https://www.linkedin.com/in/koenbal/)  
+[QlikViewModules.com](https://qlikviewmodules.thinkific.com/courses/QlikViewModulesFullPackage) 
+
+<br>
+#### Open Source projects
+[Celo](https://github.com/celo-org/celo-monorepo)
 
 <br>
 #### Study  
@@ -41,15 +49,6 @@ https://keybase.pub/koenbal/
 #### Notes and bookmarks  
 [hypothes.is](https://hypothes.is/users/KoenBal)  
 [Pinboard](https://pinboard.in/u:KoenB)  
-
-<br>
-#### Personal Projects
-[Cross-exchange crypto market making trading engine](https://www.linkedin.com/in/koenbal/)  
-[QlikViewModules.com](https://qlikviewmodules.thinkific.com/courses/QlikViewModulesFullPackage)  
-
-<br>
-#### Open Source projects
-[Celo](https://github.com/celo-org/celo-monorepo)
 
 <br>
 #### Causes  
@@ -78,5 +77,6 @@ https://keybase.pub/koenbal/
 [IBAN - BE63 6511 4758 5708]() 
 
 #### Other 
-[Product Hunt](https://www.producthunt.com/@koen_bal)  
-[walled profiles](hidden_profiles.html)  
+[Product Hunt](https://www.producthunt.com/@koen_bal)
+[KeyBase](https://keybase.io/koenbal)  
+<!-- [walled profiles](hidden_profiles.html)   -->
