--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ title: About
 
 I'm the founder of a proprietary crypto market-making hedge fund and QlikViewModules.com. I'm a financial data science analytics engineer with an MSc. degree in Mechanical Engineering and profound knowledge in quantitative finance, data visualization, and management. I get inspired by hard problems which when solved could have a substantial human impact. I'm passionate about financial inclusion, fintech, and decentralized finance.
 <br>
-I like designing and building analytics products, optimizing systems, creating structure, getting the details right, and automating using well documented and pythonic code. On a project, I bring new ideas to the table to solve the complex underlying problems. I have a never-ending thirst to learn new concepts, skills, and improve my mental models. Even without being paid, I would still build products.
+I like designing and building analytics products, optimizing systems, creating structure, getting the details right, and automating using well documented and pythonic code. On a project, I bring new ideas to solve the complex underlying problems. I have a never-ending thirst for learning new concepts, skills, and improving my mental models. Even without being paid, I would still build products.
 
 </p>
 
@@ -26,7 +26,7 @@ LinkedIn
 
 I'm the founder of a proprietary crypto market-making hedge fund and QlikViewModules.com. I'm a financial data science analytics engineer with an MSc. degree in Mechanical Engineering and profound knowledge in quantitative finance, data visualization, and management. I get inspired by hard problems which when solved could have a substantial human impact. I'm passionate about financial inclusion, fintech, and decentralized finance.
  
-I like designing and building analytics products, optimizing systems, creating structure, getting the details right, and automating using well documented and pythonic code. On a project, I bring new ideas to the table to solve the complex underlying problems. I have a never-ending thirst to learn new concepts, skills, and improve my mental models. Even without being paid, I would still build products.
+I like designing and building analytics products, optimizing systems, creating structure, getting the details right, and automating using well documented and pythonic code. On a project, I bring new ideas to solve the complex underlying problems. I have a never-ending thirst for learning new concepts, skills, and improving my mental models. Even without being paid, I would still build products.
 
 Reach out if you want to talk to me about new project-based opportunities - remote work preferred - freelance
 
