--- a/expertise.html
+++ b/expertise.html
@@ -39,8 +39,8 @@ title: Expertise
 <br>
 <h3 align="center"> Software & Tools </h3>
 \* &nbsp;&nbsp;:  
-\** &nbsp;: Docker, Hadoop, Spark, MongoDB, LucidChart    
-\*** : Bitbucket, Redis, Linux, Git, Jupyter Lab, ConEmu, TradingView, Jekyll static website generator, Sourcetree, Coda, shell scripts, cron scheduling    
+\** &nbsp;: Docker, Hadoop, Spark, LucidChart, MongoDB,    
+\*** : Bitbucket, Redis, Linux, Git, Jupyter Lab, ConEmu, TradingView, Jekyll static website generator, Sourcetree, Coda, shell scripts, cron scheduling, QlikSense    
 \****: GitHub, Atom+Hydrogen, MySQL, Asana, HeidiSQL, QlikView, MarkDown
 
 <br>
@@ -58,13 +58,13 @@ title: Expertise
 \* &nbsp;&nbsp;:  
 \** &nbsp;: sqlalchemy, requests, google-api-python-client     
 \*** : AWS CloudWatch Agent for log collection, SWAGGER API client generator  
-\****: CCXT, APIs, Oanda  
+\****: CCXT, Oanda, APIs  
 
 <br>
 <h3 align="center"> Buffer </h3>
-\* &nbsp;&nbsp;:  
+\* &nbsp;&nbsp;: AWS ElastiCache
 \** &nbsp;:  
-\*** : Redis  
+\*** : Redis
 \****:  
 
 <br>
@@ -76,21 +76,21 @@ title: Expertise
 
 <br>
 <h3 align="center"> Process - Batch </h3>
-\* &nbsp;&nbsp;:  
+\* &nbsp;&nbsp;: AWS (EMR)
 \** &nbsp;:     
 \*** :   
 \****:  
 
 <br>
 <h3 align="center"> Store </h3>
-\* &nbsp;&nbsp;:  
-\** &nbsp;:        
+\* &nbsp;&nbsp;: AWS (Aurora, Redshift, DynamoDB, DocumentDB, EMR)
+\** &nbsp;: MongoDB, HDFS         
 \*** : S3, Redis  
-\****: MySQL  
+\****: MySQL (AWS RDS)  
 
 <br>
 <h3 align="center"> Visualize </h3>
 \* &nbsp;&nbsp;:  
-\** &nbsp;:  
-\*** :  
-\****: QlikView, Altair, JupyterLab  
+\** &nbsp;: TradingView  
+\*** : Altair, QlikSense, CloudWatch, SageMaker
+\****: QlikView, JupyterLab  
