--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ title: About
 <p class="text-justify"> 
 <!-- text-justify is bootstrap -->
 
-I'm the founder of a proprietary crypto market-making hedge fund and QlikViewModules.com. I'm a financial data science analytics engineer with an MSc. degree in Mechanical Engineering and profound knowledge in quantitative finance, data visualization, and management. I get inspired by hard problems which when solved could have a substantial human impact. I'm passionate about financial inclusion, fintech, and decentralized finance.
+I'm the founder of a proprietary crypto market-making hedge fund and QlikViewModules.com. I'm a financial data science analytics engineer with an MSc. degree in Mechanical Engineering and profound knowledge in quantitative finance, data visualization, and management. I get inspired by hard problems that could have a substantial human impact once solved. I'm passionate about financial inclusion, fintech, and decentralized finance.
 <br>
 I like designing and building analytics products, optimizing systems, creating structure, getting the details right, and automating using well documented and pythonic code. On a project, I bring new ideas to solve the complex underlying problems. I have a never-ending thirst for learning new concepts, skills, and improving my mental models. Even without being paid, I would still build products.
 
@@ -24,9 +24,7 @@ Octocat is Github's logo and trademark and here is used to illustrate a fictiona
 <!-- 
 LinkedIn
 
-I'm the founder of a proprietary crypto market-making hedge fund and QlikViewModules.com. I'm a financial data science analytics engineer with an MSc. degree in Mechanical Engineering and profound knowledge in quantitative finance, data visualization, and management. I get inspired by hard problems which when solved could have a substantial human impact. I'm passionate about financial inclusion, fintech, and decentralized finance.
- 
-I like designing and building analytics products, optimizing systems, creating structure, getting the details right, and automating using well documented and pythonic code. On a project, I bring new ideas to solve the complex underlying problems. I have a never-ending thirst for learning new concepts, skills, and improving my mental models. Even without being paid, I would still build products.
++ see about
 
 Reach out if you want to talk to me about new project-based opportunities - remote work preferred - freelance
 
