Update expertise, more, toolbox

--- a/expertise.html
+++ b/expertise.html
@@ -12,36 +12,40 @@ title: Expertise
 5 - Expert (recognized authority)
 -->
 
-<h2 align="center"> Expertise </h2>    
+<h2 align="center"> Expertise </h2>
+
+<p align="center">
+  <a href="https://github.com/KoenBal/skills-demo" >expertise demo / code example</a>
+</p>
+   
 <p align="center"> *Aware **Novice ***Intermediate ****Advanced </p> 
 
-<br>
 <h3 align="center"> Python </h3>
 \* &nbsp;&nbsp;:   
-\** &nbsp;: sqlalchemy, pyspark, argparse, regex   
-\*** : redis, boto3, pandas, numpy, altair, dask, threading, concurrent     
+\** &nbsp;: sqlalchemy, pyspark, argparse, regex, flask-RESTPlus, flask  
+\*** : redis, boto3, pandas, numpy, altair, folium, dask, threading, concurrent, geopandas, unittest, pytest  
 \****: CCXT, logging  
 
 <br>
 <h3 align="center"> AWS </h3>
 \* &nbsp;&nbsp;: [AWS products](https://aws.amazon.com/products/) - Analytics, Database, Machine Learning   
-\** &nbsp;: IAM, SNS  
-\*** : EC2, RDS, CloudWatch, SageMaker, Parameter Store, S3  
-\****:  
+\** &nbsp;: IAM, SNS, Elastic Beanstalk  
+\*** : EC2, RDS, SageMaker, Parameter Store  
+\****: S3, CloudWatch   
 
 <br>
 <h3 align="center"> Topics & concepts </h3>
 \* &nbsp;&nbsp;:   
-\** &nbsp;: System Design, NoSQL, automated testing, command line interfaces, API creation  
+\** &nbsp;: System Design, NoSQL, automated testing, command line interfaces, REST api creation (server-side using flask-RESTPlus & client-side using SWAGGER)  
 \*** : documentation  
-\****: Data Visualization, Financial Inclusion, Decentralized Finance, Fintech, API usage, Agile   
+\****: Data Visualization, Financial Inclusion, Decentralized Finance, Fintech, REST api usage, Agile     
 
 <br>
 <h3 align="center"> Software & Tools </h3>
-\* &nbsp;&nbsp;:  
-\** &nbsp;: Docker, Hadoop, Spark, LucidChart, MongoDB,    
-\*** : Bitbucket, Redis, Linux, Git, Jupyter Lab, ConEmu, TradingView, Jekyll static website generator, Sourcetree, Coda, shell scripts, cron scheduling, QlikSense    
-\****: GitHub, Atom+Hydrogen, MySQL, Asana, HeidiSQL, QlikView, MarkDown
+\* &nbsp;&nbsp;: Airflow  
+\** &nbsp;: Hadoop, Apache Spark, LucidChart, MongoDB,    
+\*** : Redis, Linux, Git,  Docker, ConEmu, TradingView, Jekyll static website generator, Sourcetree, Coda, shell scripts, cron scheduling, QlikSense, Windows Subsystem for Linux, Bitbucket, Jupyter Hub on AWS, black automatic code formatter, Cloudflare  
+\****: GitHub, Atom+Hydrogen, MySQL, Asana, HeidiSQL, QlikView, MarkDown, Jupyter Lab  
 
 <br>
 <h3 align="center"> My data science platform Blueprint </h3>   
@@ -56,9 +60,9 @@ title: Expertise
 <br>
 <h3 align="center"> Connect </h3>
 \* &nbsp;&nbsp;:  
-\** &nbsp;: sqlalchemy, requests, google-api-python-client     
-\*** : AWS CloudWatch Agent for log collection, SWAGGER API client generator  
-\****: CCXT, Oanda, APIs  
+\** &nbsp;: sqlalchemy, requests, google-api-python-client, flask-RESTPlus server-side REST api     
+\*** : AWS CloudWatch Agent for log collection, SWAGGER client REST api generator, curl  
+\****: CCXT, Oanda, REST api usage  
 
 <br>
 <h3 align="center"> Buffer </h3>
@@ -77,8 +81,8 @@ title: Expertise
 <br>
 <h3 align="center"> Process - Batch </h3>
 \* &nbsp;&nbsp;: AWS (EMR)  
-\** &nbsp;:     
-\*** :   
+\** &nbsp;: pyspark, dask       
+\*** : pandas,    
 \****:  
 
 <br>
@@ -92,5 +96,5 @@ title: Expertise
 <h3 align="center"> Visualize </h3>
 \* &nbsp;&nbsp;:  
 \** &nbsp;: TradingView  
-\*** : Altair, QlikSense, CloudWatch, SageMaker  
+\*** : Altair, QlikSense, CloudWatch, SageMaker, folium maps  
 \****: QlikView, JupyterLab  
