--- a/toolbox.html
+++ b/toolbox.html
@@ -13,11 +13,20 @@ title: toolbox
 [Podyssey](https://podyssey.fm/) - Discover & share podcasts with friends  
 
 <!-- <br>
+## Android Apps -->
+
+<br>
+#### Software  
+[Brave](https://brave.com) - A browser which blocks ads and website trackers  
+[XYplorer](https://www.xyplorer.com/) - File manager for Windows  
+
+<!-- <br>
 #### Web Apps -->
 
 <br>
 #### Chrome extensions
 
+Recommended:  
 [Pinboard](https://chrome.google.com/webstore/detail/pinboard-tools/dpaohcncbmkojcpcjaojcehdlnjfbjkl) - Bookmarking  
 [LastPass](https://chrome.google.com/webstore/detail/lastpass-free-password-ma/hdokiejnpimakedhajhdlcegeplioahd) - Password Manager  
 [Hypothes.is](https://chrome.google.com/webstore/detail/hypothesis-web-pdf-annota/bjfhmglciegochdpefhhlphglcehbmek) - Collaboratively annotate, highlight, and tag web pages and PDF documents  
@@ -27,10 +36,45 @@ title: toolbox
 [Keepa](https://chrome.google.com/webstore/detail/keepa-amazon-price-tracke/neebplgakaahbhdphmkckjjcegoiijjo) - Amazon price tracker  
 [Wikiwand](https://chrome.google.com/webstore/detail/wikiwand-wikipedia-modern/emffkefkbkpkgpdeeooapgaicgmcbolj) - Wikipedia modernized  
 
-<!-- <br>
-## Android Apps -->
+All:
+Exported with [Share Extensions for Google Chrome™](https://chrome.google.com/webstore/detail/chdafcbnfkfenoeejpaeenpdamhmalhe)
+**Extensions:** 36
 
-<br>
-#### Software  
-[Brave](https://brave.com) - A browser which blocks ads and website trackers  
-[XYplorer](https://www.xyplorer.com/) - File manager for Windows  
+ [Google Translate](https://chrome.google.com/webstore/detail/aapbdbdomjkkjkaonfhkkikfgjllcleb) : *View translations easily as you browse the web. By the Google Translate team.*
+ [RescueTime for Chrome and Chrome OS](https://chrome.google.com/webstore/detail/bdakmnplckeopfghnlpocafcepegjeap) : *Keep track of the time you spend in Chrome, and get a clear picture of what you were doing all day.*
+ [Shoptimate : automatic price comparison](https://chrome.google.com/webstore/detail/bibdombdcdbbnfdjkaajfgnfhlapibde) : *Shoptimate compares prices automatically for you. We provide coupons and price alerts.*
+ [Hypothesis Web & PDF Annotation](https://chrome.google.com/webstore/detail/bjfhmglciegochdpefhhlphglcehbmek) : *Collaboratively annotate, highlight, and tag web pages and PDF documents.*
+ [FlowCrypt: Encrypt Gmail with PGP](https://chrome.google.com/webstore/detail/bnjglocicdkmhmoohhfkfkbbkejdhdgc) : *Simple end-to-end encryption to secure email and attachments on Google.*
+ [Coda for Google Chrome](https://chrome.google.com/webstore/detail/cdgkmagmdldlpiglliebaajdpdkigcbi) : *Coda for Google Chrome*
+ [Share Extensions](https://chrome.google.com/webstore/detail/chdafcbnfkfenoeejpaeenpdamhmalhe) : *Export your favorite Google Chrome™ extensions as BBCode, HTML, Wiki, Markdown or text. Share extensions via Twitter, Google Mail™.*
+ [Pushbullet](https://chrome.google.com/webstore/detail/chlffgpmiacpedhhbkiomidkjlcfhogd) : *Bringing together your devices, friends, and the things you care about.*
+ [Jaxx Liberty](https://chrome.google.com/webstore/detail/cjelfplplebdjjenllpjcblmjkfcffne) : *Unifying the Blockchain Wallet experience across devices.*
+ [Viking Deals](https://chrome.google.com/webstore/detail/cmjjfmkpcickmapganbaipcblolkapbm) : *Never forget to grab a Viking Deal!*
+ [Pinboard Tools](https://chrome.google.com/webstore/detail/dpaohcncbmkojcpcjaojcehdlnjfbjkl) : *The official chrome extension for Pinboard, the minimalist bookmarking site. Lets you save bookmarks and tab sets easily from Chrome*
+ [Session Buddy](https://chrome.google.com/webstore/detail/edacconmaakjimmfgnblocblbcdcpbko) : *Manage Browser Tabs and Bookmarks with Ease*
+ [Floating for YouTube™ Extension](https://chrome.google.com/webstore/detail/egncdnniomonjgpjbapalkckojhkfddk) : *Always on top Floating Mini Player for Youtube with controls*
+ [Wikiwand: Wikipedia Modernized](https://chrome.google.com/webstore/detail/emffkefkbkpkgpdeeooapgaicgmcbolj) : *Good old Wikipedia gets a great new look*
+ [News Feed Eradicator for Facebook](https://chrome.google.com/webstore/detail/fjcldmjmjhkklehbacihaiopjklihlgg) : *Find yourself spending too much time on Facebook? Eradicate distractions by replacing your entire news feed with an inspiring quote*
+ [Office Editing for Docs, Sheets & Slides](https://chrome.google.com/webstore/detail/gbkeegbaiigmenfmjfclcdgdpimamgkj) : *View and edit Microsoft Word, Excel, and PowerPoint files with Google Docs, Sheets, and Slides*
+ [Google Docs Offline](https://chrome.google.com/webstore/detail/ghbmnnjooekpmoecnnnilnnbdlolhkhi) : *Get things done offline with the Google Docs family of products.*
+ [Twitcher - Twitter Account Switcher](https://chrome.google.com/webstore/detail/gmngpagflejjoblmmamaonmnkghjmebh) : *Twitter Account Switcher*
+ [Tab Modifier](https://chrome.google.com/webstore/detail/hcbgadmbdkiilgpifjgcakjehmafcjai) : *Take control of your tabs*
+ [LastPass: Free Password Manager](https://chrome.google.com/webstore/detail/hdokiejnpimakedhajhdlcegeplioahd) : *LastPass, an award-winning password manager, saves your passwords and gives you secure access from every computer and mobile device.*
+ [Evercontact](https://chrome.google.com/webstore/detail/hlfhddckfmifofnpklmmiboiljmengde) 
+ [SimilarWeb - Traffic Rank & Website Analysis](https://chrome.google.com/webstore/detail/hoklmmgfnpapgjgcpechhaamimifchmp) : *See website traffic and key metrics for any website, including engagement rate, traffic ranking, keyword ranking and traffic source.*
+ [Quick Tabs](https://chrome.google.com/webstore/detail/jnjfeinjfmenlddahdjdmgpbokiacbbb) : *A keyboard centric most recently used (MRU) ordered tab list plugin with search and switch functionality inspired by IntelliJ IDEA*
+ [Private Internet Access](https://chrome.google.com/webstore/detail/jplnlifepflhkbkgonidnobkakhmpnmh) : *Defeat censorship, unblock any website and access the open Internet the way it was meant to be with Private Internet Access®*
+ [Grammarly for Chrome](https://chrome.google.com/webstore/detail/kbfnbcaeplbcioakkpcpgfkobkghlhen) : *Write your best with Grammarly for Chrome.*
+ [PocketTube: Youtube Subscription Manager](https://chrome.google.com/webstore/detail/kdmnjgijlmjgmimahnillepgcgeemffb) : *The best manager to group Youtube subscriptions. Make YouTube folders and sort Youtube channels*
+ [Asana](https://chrome.google.com/webstore/detail/khnpeclbnipcdacdkhejifenadikeghk) : *Quickly add and search tasks in Asana from any web page.*
+ [The Great Suspender](https://chrome.google.com/webstore/detail/klbibkeccnjlkjkiokjodocebajanakg) : *Make your computer run smoothly by suspending the tabs you aren't using*
+ [Momentum](https://chrome.google.com/webstore/detail/laookkfknpbbblfpciffpaejjkokdgca) : *Replace new tab page with a personal dashboard featuring to-do, weather, and inspiration.*
+ [Application Launcher for Drive (by Google)](https://chrome.google.com/webstore/detail/lmjegmlicamnimmfhcmpkclmigmmcbeh) : *Open Drive files directly from your browser in compatible applications installed on your computer.*
+ [Google Dictionary (by Google)](https://chrome.google.com/webstore/detail/mgijmajocgfcbeboacabfgobmjgjcoja) : *View definitions easily as you browse the web.*
+ [Keepa - Amazon Price Tracker](https://chrome.google.com/webstore/detail/neebplgakaahbhdphmkckjjcegoiijjo) : *Adds price history charts and the option to be alerted on price drops to all Amazon sites.*
+ [MetaMask](https://chrome.google.com/webstore/detail/nkbihfbeogaeaoehlefnkodbefgpgknn) : *An Ethereum Wallet in your Browser*
+ [Keybase](https://chrome.google.com/webstore/detail/ognfafcpbkogffpmmdglhbjboeojlefj) : *A secure chat button for every profile.*
+ [EtherAddressLookup](https://chrome.google.com/webstore/detail/pdknmigbbbhmllnmgdfalmedcmcefdfn) : *Adds links to strings that look like Ethereum addresses to your favorite blockchain explorer + antiphishing measures.*
+
+**Apps:**
+ [Floating for YouTube™](https://chrome.google.com/webstore/detail/jjphmlaoffndcnecccgemfdaaoighkel) : *Always on top Floating Mini Player for YouTube™.*
